--- a/src/main/resources/template/picCarousel1BrowseTemplate.html
+++ b/src/main/resources/template/picCarousel1BrowseTemplate.html
@@ -14,19 +14,19 @@
     </ol>
     <div class="carousel-inner">
         <div class="item active">
-            <img alt="Banner" src="../img/banner01.jpg" w:src="img/banner01.jpg"/>
+            <img alt="Banner"  cms:src="img/banner01.jpg"/>
         </div>
         <div class="item">
-            <img alt="Banner" src="../img/banner02.jpg" w:src="img/banner02.jpg"/>
+            <img alt="Banner"  cms:src="img/banner02.jpg"/>
         </div>
         <div class="item">
-            <img alt="Banner" src="../img/banner03.jpg" w:src="img/banner03.jpg"/>
+            <img alt="Banner"  cms:src="img/banner03.jpg"/>
         </div>
         <div class="item">
-            <img alt="Banner" src="../img/banner04.jpg" w:src="img/banner03.jpg"/>
+            <img alt="Banner"  cms:src="img/banner03.jpg"/>
         </div>
         <div class="item">
-            <img alt="Banner" src="../img/banner05.jpg" w:src="img/banner04.jpg"/>
+            <img alt="Banner"  cms:src="img/banner04.jpg"/>
         </div>
     </div>
     <a class="left carousel-control" data-slide="prev" href="#carousel" role="button">
