--- a/src/main/resources/template/picCarousel1BrowseTemplate.html
+++ b/src/main/resources/template/picCarousel1BrowseTemplate.html
@@ -1,47 +1,10 @@
-<!--预览视图-->
-<div class="carousel slide" id="carousel">
-    <ol class="carousel-indicators">
-        <li class="active" data-slide-to="0" data-target="#carousel">
-        </li>
-        <li data-slide-to="1" data-target="#carousel">
-        </li>
-        <li data-slide-to="2" data-target="#carousel">
-        </li>
-        <li data-slide-to="3" data-target="#carousel">
-        </li>
-        <li data-slide-to="4" data-target="#carousel">
-        </li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="item active">
-            <img alt="Banner"  cms:src="img/banner01.jpg"/>
-        </div>
-        <div class="item">
-            <img alt="Banner"  cms:src="img/banner02.jpg"/>
-        </div>
-        <div class="item">
-            <img alt="Banner"  cms:src="img/banner03.jpg"/>
-        </div>
-        <div class="item">
-            <img alt="Banner"  cms:src="img/banner03.jpg"/>
-        </div>
-        <div class="item">
-            <img alt="Banner"  cms:src="img/banner04.jpg"/>
+<!--浏览视图-->
+<div id="picCarousel" class="swiper-container" >
+    <div class="swiper-wrapper">
+        <div class="swiper-slide" th:each="url:${properties['maxImgUrl']}">
+            <img class="img-responsive center-block" th:src="${url}" src="http://placehold.it/1920x540?text=1">
         </div>
     </div>
-    <a class="left carousel-control" data-slide="prev" href="#carousel" role="button">
-                <span aria-hidden="true" class="glyphicon glyphicon-chevron-left">
-                </span>
-                <span class="sr-only">
-                    Previous
-                </span>
-    </a>
-    <a class="right carousel-control" data-slide="next" href="#carousel" role="button">
-                <span aria-hidden="true" class="glyphicon glyphicon-chevron-right">
-                </span>
-                <span class="sr-only">
-                    Next
-                </span>
-    </a>
+    <div class="swiper-pagination swiper-pagination-white"></div>
 </div>
-<!--/预览视图-->
+<!--/浏览视图-->
