--- a/src/main/resources/template/picCarousel1PreviewTemplate.html
+++ b/src/main/resources/template/picCarousel1PreviewTemplate.html
@@ -1,1 +1,13 @@
-<div>todo 正在建设</div>
+<!--预览视图-->
+<div id="picCarousel" class="swiper-container" >
+    <div class="swiper-wrapper">
+        <div class="swiper-slide" th:each="url:${properties['maxImgUrl']}">
+            <img class="img-responsive center-block" th:src="${url}" src="http://placehold.it/1920x540?text=1">
+        </div>
+    </div>
+    <div class="swiper-pagination swiper-pagination-white"></div>
+</div>
+<!--预览视图-->
+
+
+
