不再需要再设置properties

--- a/src/main/resources/template/picCarousel1BrowseTemplate.html
+++ b/src/main/resources/template/picCarousel1BrowseTemplate.html
@@ -1,5 +1,5 @@
 <!--浏览视图-->
-<div id="picCarousel" class="swiper-container" >
+<div class="swiper-container">
     <div class="swiper-wrapper">
         <div class="swiper-slide" th:each="url:${properties['maxImgUrl']}">
             <img class="img-responsive center-block" th:src="${url}" src="http://placehold.it/1920x540?text=1">
