添加编辑器浏览测试

--- a/src/main/resources/template/picCarousel1BrowseTemplate.html
+++ b/src/main/resources/template/picCarousel1BrowseTemplate.html
@@ -1,7 +1,7 @@
 <!--浏览视图-->
 <div class="swiper-container">
     <div class="swiper-wrapper">
-        <div class="swiper-slide" th:each="url:${properties['maxImgUrl']}">
+        <div class="swiper-slide" th:each="url:${maxImgUrl}">
             <img class="img-responsive center-block" th:src="${url}" src="http://placehold.it/1920x540?text=1">
         </div>
     </div>
