--- a/src/main/resources/template/picCarousel1BrowseTemplate.html
+++ b/src/main/resources/template/picCarousel1BrowseTemplate.html
@@ -1,10 +1,12 @@
 <!--浏览视图-->
 <div class="swiper-container">
     <div class="swiper-wrapper">
-        <div class="swiper-slide" th:each="url:${maxImgUrl}">
-            <img class="img-responsive center-block" th:src="${url}" src="http://placehold.it/1920x540?text=1">
+        <div class="swiper-slide" th:each="item:${dataList}">
+            <img class="img-responsive center-block" res:src="${item.thumbUri}"
+                 src="http://placehold.it/1920x540?text=1">
         </div>
     </div>
     <div class="swiper-pagination swiper-pagination-white"></div>
+
 </div>
 <!--/浏览视图-->
